# noisy-nonlinear

./: pyproject.toml
noisy_nonlinear/: HS71.py  bfgs.py  consts.py  crit.py  denoiser.py  eqp.py  export_HS71.py  export_HS71_stats.py  export_quad.py  export_rosenbrock.py  export_rosenbrock_stats.py  export_tvdenoiser.py  func.py  log.py  lp.py  noisy_solver.py  output.py  params.py  plot.py  quad.py  rosenbrock.py  sampling.py  show_versions.py  tvdenoiser.py
